Fixing backface-visibility Firefox

--- a/css/game_sheet.css
+++ b/css/game_sheet.css
@@ -359,12 +359,7 @@
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
-  }
-  
-  /* Style the front side (fallback if image is missing) */
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
+    transform: rotateX(0deg);
   }
   
   /* Style the back side */
